--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,12 @@
-browser=chrome
-url= https://library2.cydeo.com/login.html
-username=student32@library
-password=RqJkWmUu
-usernameLibrarian=librarian25@library
+## DB Credentials
+library2.db.url=jdbc:mysql://34.230.35.214:3306/library2
+library2.db.username=library2_client
+library2.db.password=6s2LQQTjBcGFfDhY
 
-passwordLibrarian=Uplz5iPS
+
+
+## UI Credentials
+browser=chrome
+library_url=https://library2.cydeo.com/#dashboard
+librarian_username=librarian27@library
+password=la4sfpjs
